k8s/backend/backend-api-strip-prefix-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: backend-api-strip-prefix-middleware
  namespace: backend-api
spec:
  stripPrefix:
    prefixes:
      - /patient
      - /doctor
      - /measurement
